--- a/src/routes/protectedRoutes/protectRoute.module.css
+++ b/src/routes/protectedRoutes/protectRoute.module.css
@@ -1,24 +1,30 @@
-.container {
+.layoutContainer {
 	display: flex;
-	/* justify-content: center; */
-	align-items: center;
-	height: 100vh;
-	margin: 0;
-	padding: 0;
+	flex-direction: column;
+	max-width: 100%;
 
-	ul {
-		list-style: none;
-		padding: 0;
-	}
-
-	.main {
+	.container {
 		flex: 1;
-		padding: 1em;
-		margin-left: 220px;
-		margin-top: 10em;
+		display: flex;
+		height: 100vh;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
 
-		@media (max-width: 700px) {
-			margin-left: 60px;
+		ul {
+			list-style: none;
+			padding: 0;
+		}
+
+		.main {
+			flex: 1;
+			padding: 1em;
+			overflow-y: auto;
+			margin-left: 220px;
+
+			@media (max-width: 700px) {
+				margin-left: 60px;
+			}
 		}
 	}
 }
